--- a/public/404.html
+++ b/public/404.html
@@ -6,9 +6,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <style>
+    img.home-redirect {
+      padding-left: 30px;
+      padding-top: 30px;
+    }
+
     body {
       width: 100%;
-      height: 100%;
+      height: 90vh;
       background: black;
       font-family: sans-serif;
       font-weight: 300;
@@ -29,13 +34,13 @@
       content: '';
       display: inline-block;
       width: 100%;
-      height: 100px;
+      height: 300px;
       background: #fff;
       position: absolute;
       top: -50px;
       left: 0;
       transform: skewY(-4deg);
-      -webkit-transform: skewY(-4deg);
+      -webkit-transform: skewY(-3deg);
     }
 
     .circles {
@@ -300,8 +305,10 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
+<body>
+  <a href="http://www.hostit.club/">
+    <img class="home-redirect" src="logo-error.svg">
+  </a>
   <section id="not-found">
     <div class="circles">
       <p>404<br>
